BG-2292 align icons and text - fix alignment for case when the icon rows have different lengths

--- a/src/app/campaign-details/campaign-details.component.scss
+++ b/src/app/campaign-details/campaign-details.component.scss
@@ -137,7 +137,7 @@ h1 {
     margin-right: 5px;
     color: $colour-primary;
     font-size: 40px;
-    min-width: 3rem;
+    min-width: 5rem;
   }
   
   .c-icon-title {
